--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,59 @@
-<p>login works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+</head>
+<body>
+    <header>
+        <div class="logo">
+            <img src="../../../assets/img/logo-modified.png" width="150vw" alt="">
+        </div>
+        <div class="title">
+            <h1 style="margin-right:5px;">L</h1>
+            <h1 style="margin-right:5px;">O</h1>
+            <h1 style="margin-right:5px;">G</h1>
+            <h1 style="margin-right:5px;">I</h1>
+            <h1 style="margin-right:5px;">N</h1>
+        </div>
+    </header>
+    <div class="title2">
+        <div class="back">
+            <a href="">BACK</a>
+        </div>
+        <div class="txt">
+            <h2>HANDCRAFTED GELATO</h2>
+        </div>
+        
+    </div>
+    <main>
+        <div class="carto">
+            <div class="form">
+                <div >
+                    <div class="mb-3">
+                        <label for="name" class="form-label">EMAIL</label><br>
+                        <input class="input" type="text" id="name">
+                    </div>
+                   
+                    
+                    <div class="mb-3">
+                        <label for="formFile" class="form-label">PASSWORD</label>
+                    <input class="input" type="password">
+                    </div>               
+                   <div class="register">
+                    <a href="" style="padding: 1.9%; color: white; text-decoration: none; border-radius: 10px; background-color: #7C623D;">LOGIN</a>
+
+                   </div>
+                </div>
+                
+                
+                
+            </div>
+           
+        </div>
+    </main>
+</body>
+</html>
