--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,80 @@
-<p>register works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body>
+    <main>
+        <div class="main" >
+            <div class="right">
+                <div class="logo">
+                    <img src="../../../assets/img/logo-modified.png" alt="" width="150vw">
+                </div>
+                <a href="">BACK</a>
+                <div  class="titole">
+                    <h1 style="margin-right:5px;">R</h1>
+                    <h1 style="margin-right:5px;">E</h1>
+                    <h1 style="margin-right:5px;">G</h1>
+                    <h1 style="margin-right:5px;">I</h1>
+                    <h1 style="margin-right:5px;">S</h1>
+                    <h1 style="margin-right:5px;">T</h1>
+                    <h1 style="margin-right:5px;">E</h1>
+                    <h1 style="margin-right:5px;">R</h1>
+                </div>
+               <div class="title2">
+                <h2>HANDCRAFTED GELATO</h2>
+
+               </div>
+            </div>
+            <div class="left">
+                <div class="carto">
+                    <div class="form">
+                        <div >
+                            <div class="mb-3">
+                                <label for="name" class="form-label">NAME</label><br>
+                                <input class="input" type="text" id="name">
+                            </div>
+                           
+                            
+                            <div class="mb-3">
+                                <label for="formFile" class="form-label">LASTNAME</label>
+                            <input class="input" type="text">
+                            </div>
+                            <div class="mb-3">
+                                <label for="formFile" class="form-label">EMAIL</label><br>
+                                <input class="input" type="text">
+                            </div>
+                            <div class="mb-3">
+                                <label for="formFile" class="form-label">PASSWORD</label><br>
+                                <input class="input" type="text">
+                            </div>
+                           
+    
+                            <div class="mb-3">
+                                <label for="formFile" class="form-label">IMAGE</label>
+                                <input class="form-control" type="file" id="formFile">
+                              </div>
+                           <div class="register">
+                            <a href="" style="padding: 1.9%; color: white; text-decoration: none; border-radius: 10px; background-color: #7C623D;">REGISTER</a>
+    
+                           </div>
+                        </div>
+                        
+                        
+                        
+                    </div>
+                   
+                </div>
+                
+            </div>
+        </div>
+
+    </main>
+</body>
+
+</html>
