--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -35,8 +35,8 @@
         <div class="btn1"  style="width: 100%; display: flex; justify-content: center;">        
             <a href="/regis">register</a>
         </div>
-        <div style="width: 100%; display: flex; justify-content: center; color: azure;">        
-            <div style="text-decoration: underline; margin-top: 4vh;" href="">user test></div>
+        <div class="guess">        
+            <div (click)="test()" style="text-decoration: underline; margin-top: 4vh;" href="">user test></div>
         </div>
     </div>
 </body>
