--- a/src/app/components/index/index.component.scss
+++ b/src/app/components/index/index.component.scss
@@ -58,3 +58,6 @@ main h1 {
     background-color: black;
     color: aliceblue;
 }
+.guess{
+    width: 100%; display: flex; justify-content: center; color: azure;cursor: pointer;
+}
