--- a/src/app/components/votenologin/votenologin.component.html
+++ b/src/app/components/votenologin/votenologin.component.html
@@ -11,10 +11,10 @@
     <div style="width: 15%; height: 10%">
       <img src="../../../assets/img/logo-modified.png" alt="" width="100%" height="100%" />
     </div>
-    <div style="font-size: 2vw">Temporary user</div>
+    <div style="font-size: 2vw;font-weight: bolder;">Temporary user</div>
     <div style="width: 30%; height: 5vw">
       <mat-icon
-        style="font-size: 4vw; width: 100%; height: 100%"
+        style="font-size: 4vw; width: 100%; height: 100%;margin-top: .4vw;"
         fontIcon="person"
       ></mat-icon>
     </div>
