update login api

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -35,11 +35,11 @@
                 <div >
                     <div class="mb-3">
                         <label for="email" class="form-label">EMAIL</label><br>
-                        <input class="input" type="text" id="email"  formControlName="email">
+                        <input class="input" type="text" id="email"  formControlName="Email">
                     </div>         
                     <div class="mb-3">
                         <label for="formFile" class="form-label">PASSWORD</label>
-                    <input class="input" type="password" formControlName="password">
+                    <input class="input" type="password" formControlName="Password">
                     </div>               
                    <div class="register">
                     <button type="submit" style="padding: 1.9%; color: white; text-decoration: none; border-radius: 10px; background-color: #7C623D;">LOGIN</button>
