--- a/src/app/components/votenologin/votenologin.component.html
+++ b/src/app/components/votenologin/votenologin.component.html
@@ -41,10 +41,10 @@
   </div>
 </header>
 <main>
-  <div class="img1" style="background-image: url('../../../assets/img/italy-pasta-traditional-foods.jpg');">
+  <div class="img1" style="background-image: url({{this.image1}});">
   </div>
   <h1>OR</h1>
-  <div class="img1" style="background-image: url('../../../assets/img/sushi.jpg');">
+  <div class="img1" style="background-image: url({{this.image2}});">
   </div>
 </main>
 
