--- a/src/app/components/upload/upload.component.html
+++ b/src/app/components/upload/upload.component.html
@@ -62,8 +62,8 @@
                     <h2>-</h2> 
                 </div>
             </ng-template>
-            <div class="edit2" >
-                    <h2>EDIT</h2>
+            <div class="edit2" (click)="delete(item.PID)" >
+                    <h2>DELETE</h2>
             </div>
               </div>
         </div>
