--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -56,8 +56,9 @@
                            
     
                             <div class="mb-3">
-                                <label for="formFile" class="form-label">IMAGE</label>
-                                <input class="form-control"   type="file" id="formFile" #img>
+                                <label for="formFile" class="form-label" >IMAGE</label>
+                                <!-- <input class="form-control"   type="file" id="formFile" #img (change)="onChangeFile($event)">  -->
+                                <input class="form-control"   type="file" id="formFile" #img > 
                               </div>
                            <div class="register">
                             <button type="submit" style="padding: 1.9%; color: white; text-decoration: none; border-radius: 10px; background-color: #7C623D;">REGISTER</button>
