--- a/src/app/components/upload/upload.component.scss
+++ b/src/app/components/upload/upload.component.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Heebo:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto+Slab:wght@100..900&family=Sriracha&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hammersmith+One&family=Heebo:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto+Slab:wght@100..900&family=Sriracha&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hammersmith+One&family=Heebo:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lexend+Mega:wght@100..900&family=Roboto+Slab:wght@100..900&family=Sriracha&display=swap');
-nav{
+
+nav {
     width: 100%;
     height: 10vh;
     background-color: #c18d68;
@@ -9,7 +10,8 @@ nav{
     justify-content: space-between;
     align-items: center;
 }
-.innav{
+
+.innav {
     width: 60%;
     display: flex;
     color: white;
@@ -17,7 +19,8 @@ nav{
     align-items: center;
     gap: 2%;
 }
-.innav2{
+
+.innav2 {
     display: flex;
     width: 40%;
     color: white;
@@ -25,6 +28,7 @@ nav{
     justify-content: flex-end;
     margin-right: 2%;
 }
+
 header {
     display: flex;
     width: 100%;
@@ -53,24 +57,65 @@ header {
     background-color: #513D31;
     height: 2vw;
 }
-.login{
-    font-size: 3vw; width: 100%; height: 100%;display: flex; align-items: center; cursor: pointer;
+
+.login {
+    font-size: 3vw;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
 }
-main{
-    margin-top: 2vw; width: 100%; display: flex ; justify-content: center;
+
+main {
+    margin-top: 2vw;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
-.edit1{
-    margin-bottom: 1.2vw; height: 8vw; width: 100%; display: flex; justify-content: space-between;
+
+.edit1 {
+    margin-bottom: 1.2vw;
+    height: 8vw;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
-.img{
-    border-radius: 15px; width: 15%; background-position: center; background-size: cover;
+
+.img {
+    border-radius: 15px;
+    width: 15%;
+    background-position: center;
+    background-size: cover;
 }
-.btn{
-    margin-right: 5vw; display: flex; width: 50%; justify-content: space-between; align-items: center;
+
+.btn {
+    margin-right: 5vw;
+    display: flex;
+    width: 50%;
+    justify-content: space-between;
+    align-items: center;
 }
-.point{
-    display: flex; justify-content: center; align-items: center; border-radius: 20px; width: 10vw; color: white; background-color: #6F1909; height: 40%; 
+
+.point {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    width: 10vw;
+    color: white;
+    background-color: #6F1909;
+    height: 40%;
 }
-.edit2{
-    display: flex; justify-content: center; align-items: center; border-radius: 20px; width: 10vw; color: white; background-color: #c0c0bb; height: 40%; 
+
+.edit2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    width: 10vw;
+    color: white;
+    background-color: #c0c0bb;
+    height: 40%;
+    cursor: pointer;
 }
