--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -30,10 +30,10 @@
     </main>
     <div class="btn">
         <div class="btn1" style="width: 100%; display: flex; justify-content: center;">
-            <a href="/login ">login</a>
+            <a  routerLink="/login">login</a>
         </div>
         <div class="btn1"  style="width: 100%; display: flex; justify-content: center;">        
-            <a href="/regis">register</a>
+            <a routerLink="/regis">register</a>
         </div>
         <div class="guess">        
             <div (click)="test()" style="text-decoration: underline; margin-top: 4vh;" href="">user test></div>
