--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -15,7 +15,7 @@
                 <div class="logo">
                     <img src="../../../assets/img/logo-modified.png" alt="" width="150vw">
                 </div>
-                <a href="">BACK</a>
+                <a routerLink="/">BACK</a>
                 <div  class="titole">
                     <h1 style="margin-right:5px;">R</h1>
                     <h1 style="margin-right:5px;">E</h1>
