--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,7 +22,7 @@
     </header>
     <div class="title2">
         <div class="back">
-            <a href="">BACK</a>
+            <a routerLink="/">BACK</a>
         </div>
         <div class="txt">
             <h2>HANDCRAFTED GELATO</h2>
