--- a/src/app/components/standing/standing.component.html
+++ b/src/app/components/standing/standing.component.html
@@ -29,7 +29,7 @@
 <body style="width: 100%; background-color: #f5f5ef">
   <header>
     <div class="back">
-      <a  href=""><h2>BACK</h2></a>
+      <a  (click)="back()"><h2>BACK</h2></a>
     </div>
     <div class="title">
       <div>
