--- a/src/app/components/upload/upload.component.html
+++ b/src/app/components/upload/upload.component.html
@@ -11,11 +11,11 @@
           <div style="width: 15%; height: 10%">
             <img src="../../../assets/img/logo-modified.png" alt="" width="100%" height="100%" />
           </div>
-          <div style="font-weight: bolder; font-size: 1.5vw; display: flex; gap: 2%; width: 80%">
-            <div>USER Name</div>
-            <div>YOUR STATUS</div>
-            <div>STANDING</div>
-            <div>UPLOAD/EDIT</div>
+          <div class="menu">
+            <a routerLink="">USER Name</a>
+            <a routerLink="">YOUR STATUS</a>
+            <a routerLink="/stand">STANDING</a>
+            <a routerLink="/upload">UPLOAD/EDIT</a>
           </div>
         </div>
         <div class="innav2">
@@ -34,7 +34,7 @@
       </nav>
 <header>
   <div class="back">
-    <a  href=""><h2>BACK</h2></a>
+    <a  (click)="back()"><h2>BACK</h2></a>
   </div>
   <div class="title">
     <div style="font-size: 1vw; display: flex; justify-content: center; border-radius: 20px; margin-top: 1vw; width: 14vw; height: 5vw; background-color: white;   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);">
@@ -49,7 +49,7 @@
             </div>
         <ng-template #xxx class="edit1">
             <div  style="height:6.8vw; align-items: center; display: flex; justify-content: center;">
-                <input type="file" >
+                <input type="file" (change)="onChangeFile($event)">
             </div>
             
         </ng-template>
