--- a/src/app/components/votelogin/votelogin.component.html
+++ b/src/app/components/votelogin/votelogin.component.html
@@ -11,11 +11,11 @@
           <div style="width: 15%; height: 10%">
             <img src="../../../assets/img/logo-modified.png" alt="" width="100%" height="100%" />
           </div>
-          <div style="font-weight: bolder; font-size: 1.5vw; display: flex; gap: 2%; width: 80%">
-            <div>USER Name</div>
-            <div>YOUR STATUS</div>
-            <div>STANDING</div>
-            <div>UPLOAD/EDIT</div>
+          <div class="menu">
+            <a routerLink="">USER Name</a>
+            <a routerLink="">YOUR STATUS</a>
+            <a routerLink="/stand">STANDING</a>
+            <a routerLink="/upload">UPLOAD/EDIT</a>
           </div>
         </div>
         <div class="innav2">
@@ -44,11 +44,11 @@
   </div>
 </header>
 <main>
-  <!-- <div class="img1" style="background-image: url({{this.image.image1}});" (click)="Awin()">
+  <div class="img1" style="background-image: url({{this.image.image1}});" (click)="Awin()">
   </div>
   <h1>OR</h1>
   <div class="img1" style="background-image: url({{this.image.image2}});" (click)="Bwin()">
-  </div> -->
+  </div>
 </main>
 
 
