--- a/src/app/components/votelogin/votelogin.component.scss
+++ b/src/app/components/votelogin/votelogin.component.scss
@@ -1,15 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Heebo:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto+Slab:wght@100..900&family=Sriracha&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hammersmith+One&family=Heebo:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto+Slab:wght@100..900&family=Sriracha&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hammersmith+One&family=Heebo:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lexend+Mega:wght@100..900&family=Roboto+Slab:wght@100..900&family=Sriracha&display=swap');
-nav{
+
+nav {
     width: 100%;
     height: 10vh;
     background-color: #c18d68;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-family: "Hammersmith One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
-.innav{
+
+.innav {
     width: 60%;
     display: flex;
     color: white;
@@ -17,7 +22,8 @@ nav{
     align-items: center;
     gap: 2%;
 }
-.innav2{
+
+.innav2 {
     display: flex;
     width: 40%;
     color: white;
@@ -25,9 +31,27 @@ nav{
     justify-content: flex-end;
     margin-right: 2%;
 }
+
 header {
     display: flex;
     width: 100%;
+}
+
+.menu {
+    font-weight: bolder;
+    font-size: 1.5vw;
+    display: flex;
+    gap: 2%;
+    width: 80%;
+}
+.menu a{
+    color: white;
+    text-decoration: none;
+    transition: .35s;
+}
+.menu a:hover{
+    color: #513D31;
+    text-decoration: underline;
 }
 
 .back {
@@ -39,7 +63,7 @@ header {
 .title {
     width: 70%;
     display: flex;
-    justify-content: center;  
+    justify-content: center;
 }
 
 .img1 {
@@ -82,6 +106,12 @@ main {
     background-color: #513D31;
     height: 2vw;
 }
-.login{
-    font-size: 3vw; width: 100%; height: 100%;display: flex; align-items: center; cursor: pointer;
+
+.login {
+    font-size: 3vw;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
 }
