--- a/src/app/components/votenologin/votenologin.component.scss
+++ b/src/app/components/votenologin/votenologin.component.scss
@@ -9,6 +9,9 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-family: "Hammersmith One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .innav {
