--- a/src/app/components/votelogin/votelogin.component.scss
+++ b/src/app/components/votelogin/votelogin.component.scss
@@ -31,7 +31,10 @@ nav {
     justify-content: flex-end;
     margin-right: 2%;
 }
-
+.innav2 a{
+    text-decoration: none;
+    color: white;
+}
 header {
     display: flex;
     width: 100%;
