--- a/src/app/components/my-profile/my-profile.component.scss
+++ b/src/app/components/my-profile/my-profile.component.scss
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hammersmith+One&family=Heebo:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto+Slab:wght@100..900&family=Sriracha&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hammersmith+One&family=Heebo:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lexend+Mega:wght@100..900&family=Roboto+Slab:wght@100..900&family=Sriracha&display=swap');
 
+body {
+    background-color: #F4EEE8;
+}
+
 nav {
     width: 100%;
     height: 10vh;
@@ -11,7 +15,7 @@ nav {
     align-items: center;
     font-family: "Hammersmith One", sans-serif;
     font-weight: 400;
-    font-style: normal
+    font-style: normal;
 }
 
 .innav {
@@ -37,20 +41,40 @@ header {
     width: 100%;
 }
 
-.innav2 a {
-    text-decoration: none;
+.menu {
+    font-weight: bolder;
+    font-size: 1.5vw;
+    display: flex;
+    gap: 2%;
+    width: 80%;
+}
+
+.menu a {
     color: white;
+    text-decoration: none;
+    transition: .35s;
+}
+
+.menu a:hover {
+    color: #513D31;
+    text-decoration: underline;
 }
 
 .back {
     width: 15%;
     display: flex;
     justify-content: center;
-    cursor: pointer;
 }
 
 .title {
     width: 70%;
+    display: flex;
+    justify-content: center;
+}
+
+.back {
+    margin-top: 1.1vw;
+    width: 15%;
     display: flex;
     justify-content: center;
 }
@@ -77,91 +101,127 @@ header {
 }
 
 main {
-    margin-top: 2vw;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    height: 90%;
+}
+
+.main {
+    display: flex;
+    width: 85%;
+}
+
+.right {
+    width: 50%;
+
+}
+
+.right a {
+    margin-left: 6%;
+    background-color: #513D31;
+    color: white;
+    padding: 1.2%;
+    text-decoration: none;
+    font-size: 1.3vw;
+    border-radius: 10px;
+
+}
+
+.logo {
+    margin-bottom: 1vw;
+}
+.innav2 a{
+    color: #513D31;
+    text-decoration: none;
+}
+.innav2 a:hover{
+    color: #513D31;
+}
+.titole {
+    margin-top: 1%;
     width: 100%;
     display: flex;
     justify-content: center;
-}
-
-.menu {
-    font-weight: bolder;
-    font-size: 1.5vw;
-    display: flex;
-    gap: 2%;
-    width: 80%;
-}
-
-.menu a {
     color: white;
-    text-decoration: none;
-    transition: .35s;
+    font-size: 10vw;
+    font-family: "Hammersmith One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
-.menu a:hover {
-    color: #513D31;
-    text-decoration: underline;
+.titole h1 {
+    font-size: 3.5vw;
+    color: #6D5B47;
 }
 
-.edit1 {
-    margin-bottom: 1.2vw;
-    height: 8vw;
+.title2 {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    color: white;
+    font-family: "Lexend Mega", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: bold;
+    font-style: normal;
+}
+
+.title2 h2 {
+    font-size: 1.8vw;
+}
+
+.left {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+.carto {
+    width: 70%;
+    background-color: rgba(245, 245, 239, 0.8);
+    height: 75%;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+label {
+    font-family: "Lexend Mega", sans-serif;
+}
+
+.form {
+    width: 80%;
+    height: 80%;
+    display: flex;
+    align-items: center;
+}
+
+.mb-3 {
+    width: 23vw;
+}
+
+.form input {
+    width: 100%;
+    height: 2vw;
+    border-radius: 10px;
+    border: 1px solid white;
+}
+
+.register {
+    margin-top: 1.5vw;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .img {
     border-radius: 15px;
-    width: 15%;
+    width: 40%;
+    height: 100%;
     background-position: center;
     background-size: cover;
-    transition: transform 0.3s ease;
-}
-
-.img:hover {
-    transform: scale(1.1);
-}
-
-.btn {
-    margin-right: 5vw;
-    display: flex;
-    width: 50%;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.point {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    width: 10vw;
-    color: white;
-    background-color: #6F1909;
-    height: 40%;
-}
-
-.edit2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    width: 10vw;
-    color: white;
-    background-color: #c0c0bb;
-    height: 40%;
-    cursor: pointer;
-}
-
-.inTitle {
-    align-items: center;
-    font-size: .8vw;
-    display: flex;
-    justify-content: center;
-    border-radius: 15px;
-    margin-top: 1vw;
-    width: 12vw;
-    height: 4vw;
-    background-color: white;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s ease; 
 }
