--- a/src/app/components/standing/standing.component.html
+++ b/src/app/components/standing/standing.component.html
@@ -3,11 +3,11 @@
     <div style="width: 15%; height: 10%">
       <img src="../../../assets/img/logo-modified.png" alt="" width="100%" height="100%" />
     </div>
-    <div style="font-weight: bolder; font-size: 1.5vw; display: flex; gap: 2%; width: 80%">
-      <div>USER Name</div>
-      <div>YOUR STATUS</div>
-      <div>STANDING</div>
-      <div>UPLOAD/EDIT</div>
+    <div class="menu">
+      <a routerLink="">USER Name</a>
+      <a routerLink="">YOUR STATUS</a>
+      <a routerLink="/stand">STANDING</a>
+      <a routerLink="/upload">UPLOAD/EDIT</a>
     </div>
   </div>
   <div class="innav2">
