--- a/src/app/components/votenologin/votenologin.component.html
+++ b/src/app/components/votenologin/votenologin.component.html
@@ -41,10 +41,10 @@
   </div>
 </header>
 <main>
-  <div class="img1" style="background-image: url({{this.image.image1}});" (click)="Awin()">
+  <div class="img1" style="background-image: url({{this.image?.image1}});" (click)="Awin()">
   </div>
   <h1>OR</h1>
-  <div class="img1" style="background-image: url({{this.image.image2}});" (click)="Bwin()">
+  <div class="img1" style="background-image: url({{this.image?.image2}});" (click)="Bwin()">
   </div>
 </main>
 
