--- a/src/app/components/upload/upload.component.html
+++ b/src/app/components/upload/upload.component.html
@@ -25,7 +25,7 @@
             ></mat-icon>
           </a>
           <div style="font-size: 3.5vw; font-weight: bolder; color: black">|</div>
-          <div>
+          <div (click)="logout()">
             <mat-icon class="login"
               fontIcon="logout"
             ></mat-icon>
