--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        <div class="logo">
+        <a class="logo">
             <img src="../../../assets/img/logo-modified.png" width="150vw" alt="">
-        </div>
+        </a>
         <div class="title">
             <h1 style="margin-right:5px;">L</h1>
             <h1 style="margin-right:5px;">O</h1>
