--- a/src/app/components/my-profile/my-profile.component.html
+++ b/src/app/components/my-profile/my-profile.component.html
@@ -10,13 +10,13 @@
 <body>
     <nav>
         <div class="innav" >
-          <div style="width: 15%; height: 10%">
+          <a routerLink="/user" style="width: 15%; height: 10%">
             <img src="../../../assets/img/logo-modified.png" alt="" width="100%" height="100%" />
-          </div>
+          </a>
           <div class="menu">
-            <a routerLink="">USER Name</a>
+            <div style=" color: beige;">USER: {{name}}</div>
             <a routerLink="">YOUR STATUS</a>
-            <a routerLink="/stand">STANDING</a>
+            <a routerLink="/standing">STANDING</a>
             <a routerLink="/upload">UPLOAD/EDIT</a>
           </div>
         </div>
