--- a/src/app/components/upload/upload.component.html
+++ b/src/app/components/upload/upload.component.html
@@ -7,17 +7,18 @@
 </head>
 <body>
     <nav>
-        <div class="innav" >
+        <a routerLink="/user"  class="innav" >
           <div style="width: 15%; height: 10%">
             <img src="../../../assets/img/logo-modified.png" alt="" width="100%" height="100%" />
           </div>
           <div class="menu">
-            <a routerLink="">USER Name</a>
-            <a routerLink="">YOUR STATUS</a>
-            <a routerLink="/stand">STANDING</a>
-            <a class="on" style="color: #6F1909; text-decoration: underline;" routerLink="/upload">UPLOAD/EDIT</a>
+            <div style="color: beige;">USER: {{name}}</div>
+            <a class="a" routerLink="/upload">YOUR STATUS</a>
+            <a class="a" routerLink="/standing">STANDING</a>
+            <div class="on" style="color: #6F1909;" routerLink="/upload">UPLOAD/EDIT</div>
           </div>
-        </div>
+          
+        </a>
         <div class="innav2">
           <a routerLink="/profile">
             <mat-icon class="login"
