--- a/src/app/components/votelogin/votelogin.component.html
+++ b/src/app/components/votelogin/votelogin.component.html
@@ -8,11 +8,11 @@
 <body>
     <nav>
         <div class="innav" >
-          <div style="width: 15%; height: 10%">
+          <a routerLink="/user"  style="width: 15%; height: 10%">
             <img src="../../../assets/img/logo-modified.png" alt="" width="100%" height="100%" />
-          </div>
+          </a>
           <div class="menu">
-            <a routerLink="">USER Name</a>
+            <div style=" color: beige;">USER: {{name}}</div>
             <a routerLink="">YOUR STATUS</a>  
             <a routerLink="/standing">STANDING</a>
             <a routerLink="/upload">UPLOAD/EDIT</a>
@@ -33,9 +33,9 @@
         </div>
       </nav>
 <header>
-  <div class="back">
+  <!-- <div class="back">
     <a  href=""><h2>BACK</h2></a>
-  </div>
+  </div> -->
   <div class="title">
     <div>
       <h1>WHICH MENU IS BETTER?</h1>
@@ -44,10 +44,10 @@
   </div>
 </header>
 <main>
-  <div class="img1" style="background-image: url({{this.image?.image1}});" (click)="Awin()">
+  <div class="img1" style="border-radius: 10px; background-image: url({{this.image?.image1}});" (click)="Awin()">
   </div>
   <h1>OR</h1>
-  <div class="img1" style="background-image: url({{this.image?.image2}});" (click)="Bwin()">
+  <div class="img1" style="border-radius: 10px;  background-image: url({{this.image?.image2}});" (click)="Bwin()">
   </div>
 </main>
 
