--- a/src/app/components/upload/upload.component.html
+++ b/src/app/components/upload/upload.component.html
@@ -20,10 +20,9 @@
           
         </a>
         <div class="innav2">
-          <a routerLink="/profile">
-            <mat-icon class="login"
-              fontIcon="person"
-            ></mat-icon>
+          <a routerLink="/profile" style="    background-image: url('{{imgProfile}}');
+          ">
+            
           </a>
           <div style="font-size: 3.5vw; font-weight: bolder; color: black">|</div>
           <div (click)="logout()">
