--- a/src/app/components/votelogin/votelogin.component.scss
+++ b/src/app/components/votelogin/votelogin.component.scss
@@ -32,6 +32,10 @@ nav {
     margin-right: 2%;
 }
 .innav2 a{
+    width: 12%;
+    border-radius: 50%;
+    background-position: center;
+    background-size: cover;
     text-decoration: none;
     color: white;
 }
