--- a/src/app/components/standing/standing.component.html
+++ b/src/app/components/standing/standing.component.html
@@ -1,27 +1,23 @@
 <nav>
-  <div class="innav" >
-    <a routerLink="/user"  style="width: 15%; height: 10%">
+  <div class="innav">
+    <a routerLink="/user" style="width: 15%; height: 10%">
       <img src="../../../assets/img/logo-modified.png" alt="" width="100%" height="100%" />
     </a>
     <div class="menu">
       <div style=" color: beige;">USER: {{name}}</div>
       <a routerLink="/user">YOUR STATUS</a>
-      <a  style="color: #513D31;">STANDING</a>
+      <a style="color: #513D31;">STANDING</a>
       <a routerLink="/upload">UPLOAD/EDIT</a>
     </div>
   </div>
   <div class="innav2">
-    <div routerLink="/profile">
-      <mat-icon class="login"
+    <a routerLink="/profile" style="    background-image: url('{{imgProfile}}');
+    ">
 
-        fontIcon="person"
-      ></mat-icon>
-    </div>
+    </a>
     <div style="font-size: 3.5vw; font-weight: bolder; color: black">|</div>
     <div (click)="logout()">
-      <mat-icon class="login"
-        fontIcon="logout"
-      ></mat-icon>
+      <mat-icon class="login" fontIcon="logout"></mat-icon>
     </div>
   </div>
 </nav>
@@ -29,19 +25,36 @@
 <body style="width: 100%; background-color: #f5f5ef">
   <header>
     <div class="back">
-      <a  (click)="back()"><h2>BACK</h2></a>
+      <a (click)="back()">
+        <h2>BACK</h2>
+      </a>
     </div>
     <div class="title">
       <div>
-        <h1>WHICH MENU IS BETTER?</h1>
-        <p>Choose the food you like most from these two menus.</p>
+        <h1>STANDING</h1>
       </div>
     </div>
   </header>
-
-  <div
-    class="con" *ngFor="let i, of this.data " style="background-color: #f5f5ef">
-    <div class="st"  >
+  <div style="width: 100%; display: flex; justify-content: center;">
+    <div style="width: 64%; display: flex; justify-content: end;">
+      <mat-form-field style="width: 15%">
+        <mat-label>Select Date</mat-label>
+        <mat-select #day matNativeControl required [(ngModel)]="country" (ngModelChange)="selectDay(day)">
+          <mat-option value="0">to day</mat-option>
+          <mat-option value="1">1</mat-option>
+          <mat-option value="2">2</mat-option>
+          <mat-option value="3">3</mat-option>
+          <mat-option value="4">4</mat-option>
+          <mat-option value="5">5</mat-option>
+          <mat-option value="6">6</mat-option>
+          <mat-option value="7">7</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    
+  </div>
+  <div class="con" *ngFor="let i, of this.data " style="background-color: #f5f5ef">
+    <div class="st">
 
       <div style="display: flex">
         <div class="incon">
@@ -62,6 +75,6 @@
 
 
     </div>
-       
+
   </div>
 </body>
