--- a/src/app/components/statistic/statistic.component.scss
+++ b/src/app/components/statistic/statistic.component.scss
@@ -45,6 +45,35 @@ header {
     text-decoration: none;
     color: white;
 }
+.login {
+    font-size: 3vw;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.menu {
+    font-weight: bolder;
+    font-size: 1.5vw;
+    display: flex;
+    gap: 2%;
+    width: 80%;
+}
+nav a{
+    
+        text-decoration: none ;
+
+}
+.menu a{
+    color: white;
+    text-decoration: none ;
+    transition: .35s;
+}
+.menu a:hover{
+    color: #513D31;
+    text-decoration: underline;
+}
 
 .back {
     width: 15%;
@@ -70,106 +99,17 @@ header {
     background-color: #513D31;
     height: 2vw;
 }
-
-.login {
-    font-size: 3vw;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-}
-
-main {
-    margin-top: 2vw;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.menu {
-    font-weight: bolder;
-    font-size: 1.5vw;
-    display: flex;
-    gap: 2%;
-    width: 80%;
-}
-nav a{
-    
-        text-decoration: none ;
-
-}
-.menu a{
-    color: white;
-    text-decoration: none ;
-    transition: .35s;
-}
-.menu a:hover{
-    color: #513D31;
-    text-decoration: underline;
-}
-
-
-.edit1 {
-    margin-bottom: 1.2vw;
-    height: 8vw;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.img {
-    border-radius: 15px;
-    width: 15%;
-    background-position: center;
-    background-size: cover;
-    transition: transform 0.3s ease;
-}
-
-.img:hover {
-    transform: scale(1.1);
-}
-
-.btn {
-    margin-right: 5vw;
-    display: flex;
-    width: 50%;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.point {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    width: 10vw;
-    color: white;
-    background-color: #6F1909;
-    height: 40%;
-}
-
-.edit2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    width: 10vw;
-    color: white;
-    background-color: #c0c0bb;
-    height: 40%;
-    cursor: pointer;
-}
-
 .inTitle {
     align-items: center;
-    font-size: .8vw;
+    font-size: .63vw;
+    text-align: center;
     display: flex;
     justify-content: center;
     border-radius: 15px;
     margin-top: 1vw;
-    width: 12vw;
+    width: 13vw;
     height: 4vw;
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
+
