--- a/src/app/components/votelogin/votelogin.component.html
+++ b/src/app/components/votelogin/votelogin.component.html
@@ -12,7 +12,7 @@
             <img src="../../../assets/img/logo-modified.png" alt="" width="100%" height="100%" />
           </a>
           <div class="menu">
-            <div style=" color: beige;">USER: {{name}}</div>
+            <div style=" color: beige;">USER: {{this.name}}</div>
             <a routerLink="">YOUR STATUS</a>  
             <a routerLink="/standing">STANDING</a>
             <a routerLink="/upload">UPLOAD/EDIT</a>
