--- a/src/app/components/statistic/statistic.component.html
+++ b/src/app/components/statistic/statistic.component.html
@@ -41,5 +41,9 @@
           </div>
         </div>
       </header>
+      <div style="width: 50vh; height: 50vh;">
+        <canvas id="myChart" width="100%" height="100%"></canvas>
+      </div>
+      
 </body>
 </html>
