--- a/src/app/components/statistic/statistic.component.html
+++ b/src/app/components/statistic/statistic.component.html
@@ -41,9 +41,15 @@
           </div>
         </div>
       </header>
-      <div style="width: 50vh; height: 50vh;">
-        <canvas id="myChart" width="100%" height="100%"></canvas>
+      <div class="st" style="width: 100%; display: flex; justify-content: center; align-items: center; margin-top: 1vw;">
+        <div style="width: 37%;">
+          <div style="width: 100%; height: 100%;">
+            <canvas id="myChart" width="100%" height="100%"></canvas>
+          </div>
+        </div>
+        
       </div>
+      
       
 </body>
 </html>
