--- a/src/app/components/standing/standing.component.html
+++ b/src/app/components/standing/standing.component.html
@@ -4,7 +4,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
-<nav>
+<nav *ngIf="user!=0;else g">
   <div class="innav">
     <a routerLink="/user" style="width: 15%; height: 10%">
       <img src="../../../assets/img/logo-modified.png" alt="" width="100%" height="100%" />
@@ -27,7 +27,32 @@
     </div>
   </div>
 </nav>
-
+<ng-template #g>
+  <nav>
+    <div class="innav">
+      <div style="width: 15%; height: 10%">
+        <img src="../../../assets/img/logo-modified.png" alt="" width="100%" height="100%" />
+      </div>
+      <div style="font-size: 2vw;font-weight: bolder;">Temporary user</div>
+      <div style="width: 30%; height: 5vw">
+        <mat-icon
+          style="font-size: 4vw; width: 100%; height: 100%;margin-top: .4vw;"
+          fontIcon="person"
+        ></mat-icon>
+      </div>
+    </div>
+    <div class="n2">
+      <div class="n3">
+        <a [routerLink]="['/standing']" [queryParams]="{ user: 0 }" style="text-decoration: none; color: white;">STANDING</a>
+  
+      </div>
+      <div style="font-size: 2vw; font-weight: bolder; color: black">|</div>
+      <div class="n4">
+        <a routerLink="/login">LOGIN</a>
+      </div>
+    </div>
+  </nav>
+</ng-template>
 <body style="width: 100%; background-color: #f5f5ef">
   <header>
     <div class="back">
