--- a/src/app/components/standing/standing.component.scss
+++ b/src/app/components/standing/standing.component.scss
@@ -130,6 +130,38 @@ header {
     width: 100%;
     height: 100%;
 }
+.n2 {
+    display: flex;
+    width: 40%;
+    color: white;
+    gap: 2%;
+    justify-content: flex-end;
+    margin-right: 2%;
+}
+
+.n3 {
+    width: 20vh;
+    height: 5vh;
+    border-radius: 20px;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #6b4e28;
+}
+
+.n4 {
+    height: 5vh;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.n4 a{
+    text-decoration: none;
+    color: white;
+}
 .icon{
     font-size: 6vh;
     width: 100%;
