--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,5 +1,5 @@
 <mat-dialog-content>
-    <!-- A WIN -->
+    <!-- A WIN na -->
     <div style="display: flex;">
         <div>
             <h2>WINNER IS </h2>
