--- a/src/app/components/standing/standing.component.html
+++ b/src/app/components/standing/standing.component.html
@@ -98,7 +98,7 @@
         <div class="incon2">
           <div class="incon3">
             <div class="rank" style=" margin-right: 2%">{{index +1}}.)</div>
-            <div class="img1" style="background-image: url({{i.url}});">
+            <div class="img1" style="background-image: url({{i.url}});" (click)="grap(i.PID)">
             </div>
           </div>
           <div style="margin-right: 2%;width: 20%;">{{i.point}} คะแนน</div>
